--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="libs/FilaObj.jar"/>
+	<classpathentry kind="lib" path="libs/listaObj.jar"/>
+	<classpathentry kind="lib" path="libs/ordenacao_bubbleSort.jar"/>
+	<classpathentry kind="lib" path="libs/ordenacao_quickSort.jar"/>
+	<classpathentry kind="lib" path="libs/ordenacao_mergeSort.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java 21"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
